# chatonski-blog-scraper

./: README.md  main.py  pyproject.toml
output/: chatonsky_articles_20250525_205338.txt
